--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:xPD+1ElK,iv:0NRdzWiAFbjP9qOCSAVDrEbTeMuIe3L/WgF7ov3NqQw=,tag:c3yNQoLp8FobE+fko7eQ3g==,type:str]
-ansible_user: ENC[AES256_GCM,data:kx9OA3U8,iv:aAXC8EfsySJoso7uNYXNnqlTQxUukA+zeW3Yki8g53s=,tag:STrujGh/RATxMDS+GwlA+Q==,type:str]
+kind: ENC[AES256_GCM,data:+tBLALB+,iv:ePz6vKG8dwncqZFAl8IByrPByeXmWIr6PnmWv8ZESYI=,tag:LNHzALsDvhDGLN691m+g0g==,type:str]
+ansible_user: ENC[AES256_GCM,data:xJtuxFOt,iv:06gGVVqafYXZFyVu3cRn2f8/F/EP66T18hyN/1DZP94=,tag:glOomsFNJEHpFc4U4cJDAA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxUzNHaGZpa1pXZGZ1ZW9K
-            d3l5WnV1QW14Y1o4eW51YmtOUFM1OEc1U3d3CjNDSmtLaTI5RGpDUXFXWG1qdkZt
-            bnpPd3NKVzIvVFd1VE5ReFU3R204bVkKLS0tIDlDV1hhN1FqRjlyZFJKcy9ucXNq
-            K2o0MGNYU2JGZStHdGhiNkplSFFLbjgKEUBwSPsjIqSHtbpcRfN73B3DnLosRuC+
-            rpEgWUFtOKcMsVlYvtTEpU6VdPmvbMsErq0E0s04UesNFR4F+7H8Dg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiS2t6SjBMSVhhY3R6bi82
+            UTJ0WWRKNCtORXlzUnlaMkE0NFdZQm4xMnc0CkI4UE8vU3QxcGlzc1ExK1ZGT3Vo
+            RWx6UGFtSU9jM2Zrekk1M2JyQ1VWQTAKLS0tIGQ2ZktkR0NtQVFDMVFpWlFHZm9i
+            RitlL3kzUGdka01xM3pGdzFuUkI5ZDQKZcb5pS3+4U/bVTuPyDxj1cHCivjI4IdK
+            NyQFO/X3bSJ+wyzsTg8w0imh2PJAk66Tx2nsiliRfLbiQvDTdmKE4w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T16:13:56Z"
-    mac: ENC[AES256_GCM,data:OOQ5BTS+4LJ+G3s9a1HDJxxqhfa89t0Ul0TwF9Hm6erOWvOpa/lHnvzDEhZrNgADruLdB1TkV4VX5vgIvrGDSVMs7hY3KsGB1orD+cO19NWzMxzB1hDcU8lBwHYq3hxnwW6kM2wro6vdV8jo08JEmlP8RaVXsALZuap6eGU8TPE=,iv:W+R0zBxlLP+NHtVM7erglhg1apPzKsTPQpMcKjFB7XM=,tag:kUNrR11K+CB6Uc5Xt+0X0g==,type:str]
+    lastmodified: "2023-01-15T23:56:20Z"
+    mac: ENC[AES256_GCM,data:H1wzMAGbiCML/m1PzxnUW2NGv8MBdGTsfJbbOtWHp2Lttxqek7cEgztEkzsDjSK9z5vzMkdjPYNSsDV2NW8kEJHc3yjhuPav5jUrwViOSFSXr3wJxn6zqCIo7W+N7Qli3IZ/i99fQGu1Nn3/ekn2ziv2a1VJ28hf5R3aDCBsyVI=,iv:a+CuIxFCL+tucBIuNuvm2vX+JnIlm64KzlTtzv9U+6U=,tag:pgwSzNKqX4TgdgL1oSlS8A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
