--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:2/pd2pxo,iv:2KhGOLxZdpJldDn+lvjTwPmtE2C9LUSoGg8S90JdDP8=,tag:bz07XpiMnD3S9ZjNXJn5xg==,type:str]
-ansible_user: ENC[AES256_GCM,data:W8/TQ9b7,iv:6zBGAcpllY8X2ELVRar8kbtBIhqoDbbT2W7axUtnoA8=,tag:ULBak9gWOeVh3CAYhSoL9w==,type:str]
+kind: ENC[AES256_GCM,data:wV7L4TWi,iv:pYbHnKUR3YSIElhGF6b11WWwfmZHiMhFx4Rpmct+qcg=,tag:6jivEvllpPVEujybMP21pQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:t7ub0zro,iv:hsfo+Zw8NOSF4uUFqjhxvl7h2470xBwRSaOcx0Xx/K0=,tag:s4geKJEyGTvQBdZZcG5Yxw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMRHc5bVJiQldrS1pYbXFP
-            UjQ2VnR3MVNjQXVNYTdPT1A1dFFLUzBDaEVvClc2L2tTaVdNSXJsQ0VCbG8wb01o
-            QXJpbUdleEcrV2Q4V1lwaXNpOVk0dE0KLS0tIGY0MGtDYkNqaFh3YmRPRU1ualo2
-            VDlZU3Bsa3c2OCtjNlcrYzFydDdKYVEK9sCKo/8bpQEnwSEsoETy+snZ0ca++0kM
-            UAclKdWBGAzglQt5JAV6Qjjf5Zk2u67IZ212/kXgPNQms58RUkqJNg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmMTl0MFArNUNveXdVVXZJ
+            WTQrc2x2OWdJMVlYV2NLdjhoSlE0RWh3TVNzCngrcGxuSUZqR1owd1pYZzhjdTBJ
+            b0ZyL1g2ZHhqVy9yaFN1RDk1UUFIbWMKLS0tIG1LUHRqMGF5MUphY3JRRTU4NE5N
+            emFnOXZPZENPWU9jTDhaS05EUVQ5NHcKgERaNu8KeRgTPI9kkUIhXliOcSb3PNSa
+            G/DN+QFEhlmJzzJ3RpJZaP/1RkVvHn0FDnx6vRuBy1lqHVKzrA1u9Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T16:13:56Z"
-    mac: ENC[AES256_GCM,data:xUn0EwFJYt4r/IOvDcdAjKUakzzjStYL8zi/5S/807uEefAbAuXvEWiq9yR9uN+mxSIDp2inObf0yRQ2zsOIr2qjdJ9/bgEg4Mt7L85z1aQyVL1T5Uxjlyb9uXvQFCn8X0nOzthF9Q9vxg5NLDM36AH65JGyNiqF2YeKfLrSgpM=,iv:W+x8yI9LMbQdVgi6aiCdlECw1DH4B74KVj766nTeGg4=,tag:QG70FG6vHFjvFxVEVLXYzg==,type:str]
+    lastmodified: "2023-01-15T23:56:20Z"
+    mac: ENC[AES256_GCM,data:7bpMN1Xo8rJVA6dqUUPRRMtKchOkbxbsB7n1CRb5NsRvlrfL4IPxEVTfC2FHl3XhYOlxkextiXoQIQHeTGjqACK8rcZvHyrqeIT9ngkwByDDfulFP6lJaDNOru/DOvJVe4qN97D5Pv60gjSvtvbc6Grrk7z900zEBRx+U1WpN9E=,iv:vacdxJLPtFhkK5Vm40peyf2LcMmxLd8rB9S6L+T7pOA=,tag:DmS4c92sD8CY04AOKKclbQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
