--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:1zyPJFgh,iv:SX0g/E0ywY03VBYWNpnf5VBrUsc7X4Mgy+ZKEoTxD94=,tag:LvVhCPEsBiu4mnjsszLY8Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:AcDabK7T,iv:bOBhLQK7cMahENt9BSYe7lx7xtLiWoi9u0faHLPJpx0=,tag:NB4Xuq+w6OXYuQ2onjOMoA==,type:str]
+kind: ENC[AES256_GCM,data:vazi1xZQ,iv:eZhkk/o/Dwi4emtYrL8IlQNIr4ETTnsIaUGBPoBqr3c=,tag:7XyMJlgvI9QYFC7hNxf18A==,type:str]
+ansible_user: ENC[AES256_GCM,data:A9kADqaB,iv:Xqn20kkbaQZGtJWciD0uCc0QeM4hRBODohfhN9U91To=,tag:FW0msj2We73kYMLL4cU+AA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhTnRZcmY0YU9qRnRDVFl4
-            eWRqaVdtNnZqMDdFYXBNN0NpM3NiQ0pOKzE4ClBtQjcrU3lkOGYxZ2l2c0E5YVky
-            NXpOeWpNclN1WE51ZSt3bDVDLzZLamcKLS0tIGtXdFFwNUpWanJJY2dDSmJTWjJH
-            T1BacXNVc0hvaldqTFBRbEVkay9SeVkKKHxiGIUDObB9VfoGzqtCwjlkd74fRjP3
-            9GQQHohIaZU0GEYyetzwWyIRR8XV93mxfgI826HI0jOgRoZxhlbYeg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwMnVSeG91eXJBZ1BMMjF4
+            WHFIbWJoSHBiQTMyRnhOTnBkcERLVTZnYURzCmNmVnhaSDJKWXozWjdLeThPY2xS
+            Nk5oUHJqU2xxWFNmSkVwQVFGQWlRRU0KLS0tIDVZNnloL3krOHBPaExuV0M3UCtG
+            bjMwSUh1VGkycVYwT2MzemdpclVpOEUKSaKW3KidF8xjK7GEndzmw7FZI+5JNgwe
+            kbc6qWEOnFwFKNKXfpDpoSkmvBgPYlRvkCqRC8yB+7P47tua+X9xSg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T16:13:56Z"
-    mac: ENC[AES256_GCM,data:PwJLvKYtdzFvKUWWfbGNSJw8DIEtQ5P+zHN6A1yyrPQ4oWYlUPm5SaXRrdWFnQ1KNA+2z0RVExEgGjFV9u0yS5gRWEU3Q+88WJHF4CxE/BNwAdLz2vsLjCTmMEoVnsolRFCkjZNLJEum+eTZ23EXhvPqcwgbqj3eKHXQu0hU0cA=,iv:F/g/Os2P77bkqBNRgJJ0fgPwn6UWlHioal0TLKpCOUg=,tag:GYGJA8Tu/f/bsAH6APFgnQ==,type:str]
+    lastmodified: "2023-01-15T23:56:20Z"
+    mac: ENC[AES256_GCM,data:3skSUcOYkp6WYbx5dMr050jGXrHbuDGLCmTIfYynmJQkZ6jrZOx2w2g+Ncz5m5qZkzLREz4wOOkrdGpNgAjXvs2rBnvldx12rboVzse/39zt1uQGsjjAAwBfbWnRf75oB6v5zgbuYzA6L5I4lTu/r/XL0fuN/Fpz1avobcjCFU0=,iv:0ynQ4TjDh3HVIxt8UB44cU0KU0H5bc++4VjBAipyObQ=,tag:zJqVPSu1b4Vy7iwW1bFSVA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
