--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:0TlAUlxEaxBU/DEu/uLICOgdEjfe,iv:get9IJ41cIMbMQjGtUmUKfAESocdAzhwrw6A+MtTbys=,tag:LdTNPO1P/SfBYgJstXUvpw==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:/gh85/EZjAZoGhGZ2RJDCdvAbl/rkox7YlwJJaxW4Uk7xFl9GA==,iv:gSmXCyMLwT16Rz7ZhrKutl7QHXZk3a8tJn8AN2MZ0ZM=,tag:TZGPJN4uFDecCYXKhNDHSQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Qkq1WH7vY5yWaBI=,iv:8ID7X9+n/3Nd9lPnB8/WjQaHMrKulhagnrXinLiZnxo=,tag:qCe/hxEkxlJre4T+elZMww==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:yvmQxWUdYYsBCAIZ9/Ikx6P2j9vn,iv:4AGj621dwiWd6fiMsPLcPTspGst9ajbg0u5bcDhpX7o=,tag:0sZbuy2DhmZS4ULoza90yA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:Sc58qWDfWcCxZ17Om3U7+4j3oTuOHygcrBulmcO96zm2dqGpRw==,iv:VEmv+GEckNRxQf+wEqLfy3OSxA1dsL7N4gPIezfCz9g=,tag:bNFf5qPuAXKNGg72PsgXHg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:w//57K1uFwPEIRY=,iv:pY39yI6B61cpwkdaMLLm9IfU9komWKZSfNAUxLlaTFY=,tag:RRleZ5XUkcbfHKFdHKZ8XA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkNno1Y0NqcHFQL2NORlp1
-            YzhYZkZ2K2JNNGFEK1hQNkJMNlhFZ1V5ZkdzCjBlS09rS1FsK0RqMXhTeitwTEh4
-            enJKbldKUWFxTjFMM0hhcHFTTHJ1K00KLS0tIGk1emhZeUplbEJZbWNuMEp2WjM3
-            Q2QybWR6Y0tCWUhyR3B6NFFJUDVNTVEK9fSL9RC79Rn1aYjlFbHusiDh8Z77Emlo
-            Qqe1uexu3YvjmMjC4ftUaNwUMor9c1vo0K84keqg3CfAYOwGTKLp+Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxb25EODVBeWVmRzNZcXNF
+            THNZbGxEeW9DaGIyb2xsTndtYmtqVTZONFVjCmUvR3UvWTZEWkMwTVRtWTRyTkwv
+            WXVLdC9tWnVQNWp0d1QwZzZORmJjck0KLS0tIFEyblRPdDlnTFJsamRERllCQ0lF
+            TmUrcFU0WG1WMDRtQU9pamd3cE5zcGsKCKmXX2qphO9e77gImZUoYv++ZircZeAw
+            vHAY6n2bXuUpDKFwkc7lXBmwUasQgAc6WRhgfj9cHKm41p3xyujKkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T16:13:56Z"
-    mac: ENC[AES256_GCM,data:iqpgy2B46yUEM+o104QF+7P4z+wU7xlFAMkABhj7DMsWOw3uuPmKPbEiCkDNgmkBbBAF31p7DFFi+U9pqGBWNst/V9KsLxc6eOzjl63XG5oD2t3dlSx/CPm1//GJdKj3cK8zyJM9WLC9SpBRdSMJfKEjJs5VrGk+6MZ2fG68SpE=,iv:tnPPbxME+k5Hwl5gmnG5R6Oy2t8qxgWLPchZZjV+uzQ=,tag:AIbh8XXZnomGhHq7MJG+BA==,type:str]
+    lastmodified: "2023-01-15T23:56:20Z"
+    mac: ENC[AES256_GCM,data:nzithQu0V/fAjvQ6FPCfK1W6QVYWGyZRD2cEgSWRPOOEm5WOA00ofc6OteTat2LkPYRceOh/TSCCXJk/3fUXMOg2ZsrnZGRUFxQXyyulc3JBa0ng9r7W0lKWFvQCxmBgrBHptWjQE+I/hN0YoViFzAAlo15bmGnP5rgfwZJofZY=,iv:NM1Qb2b0f5LcwaY2S7WwOlHMULMEf+OLDFEeleu0hj0=,tag:/qyIzt1+n0AOJyDCVlYyow==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
