--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:3XJWu/DxDLJVOSw=,iv:j78tSvUp7UVQcfDxafBsl8CvXcBB/QlQda7CkihipYo=,tag:mS+UdS9exhyir3Im9bA4nw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:IM/+LqvVsWOXrJl7NfUUL5vUfMEr,iv:ZTdczbSX55vAaJIPz7uP1K7j9Qp0zVXnNJSAlBeNJlY=,tag:/QZ0GYaK5CdQgtPEZretig==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:cKirinrGsIF/2pOrY54kLAZ5YXJVaF9vT+p7tGJydL0SrVQVDOrCGwNm5gVp7geUM95Sfrfq4HkR0I11iXCx7+jyzviA36o=,iv:GsLctoOFAkyJC7jq0VeXfHq75idEFnoBOPfFLWPfcWc=,tag:keEkS5vBR4TxrELZtwLbdg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:v9MN5IwPXMsaDDTeWssvzBiCqtup5ifjhYVYeB+bPedIA2c=,iv:x1Tk7M6zH66crzg7oK+jpBYD/n6npBg9VUpNlywP0vA=,tag:D1IFAuhAs/rn6jXAiqoywQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:oP6mjavUbM4JhCV5A/9Z0BgVOA==,iv:tOUwMWovo9SJerdDrPaSMHskSOs1Ud1u1Kw4aZ0OJCg=,tag:/UG9+eN/522v/hwLiHDF3w==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:hC378uwIqJYfWs4Te2omUmCfdrZa,iv:J9dZNa5tIN51rY6slA/UY4KVLcIkCmQAZkeqbg++baE=,tag:Ro9obbUoHX+XWmWtuXYNmQ==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Q3AawopWRbw=,iv:OsH8cojL28CmKh7mEByTXsWxkFkkhWyFXkCe6lqKkGg=,tag:QQ3hOMfTYwL+W+X91fj1uQ==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Lt1xEKureMI=,iv:g3iZPRiXo7Zib6wL9+zRtv9Efuo6ymZkr9TQLSEeT9Y=,tag:5+hr7epeeWeTtigXoxenTg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:fcn8kil2ls6ZSqcJrw3PWc5te7/Z5CObQKiTa5UHGF36lLS39EGidU0yu1ORVnOGXpLUuGT6aTA2l9p9RXWQRA==,iv:YHxU3SJgEaRu5OYTT2bKcW0qoBt3/x4+q1O1xnu6jVE=,tag:Jgm3Ns26VNUcYzDYaA1GZg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:bzHz0SQMYCcetaWGT1yG1i/zuzqxFpQYtmw+HOQHDLYI0BQgsUqcZAyoSM16RX5LrROib+RjEXsbGLB2IzPFzw==,iv:Ji7j9bxPIVPx69pAHujA2CvW3xily3JUNpSxed6fZug=,tag:BAVzgMlB62xhp8x0XUKl9Q==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:So3A9bwib1aJ,iv:HOtRYXE/Cp56LV95MGKLvhnOwBG7Er7FRYaBqUQ8SIU=,tag:tNtrrZjOWaIjxhIRFrTCzA==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:OQJ4Xo4cs1esT2pMMGpM,iv:R1eqzhhceqq/0QogHvkA52JuFlbg1VP7o77uG7V3J5c=,tag:9Kiy8GSXAnJUQInr/pCruw==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:POOUTxx1+KIlshUUakLe0DHxTteyhGczZc0+hBu+hsVudMsO3Cj/R0cFUsvxt7wOUj8=,iv:fNJMHeDSayFkPRyUiyHiEHlT+4TOBxeZ+njKlMOYftY=,tag:6bNi6ODSml9SHm53mx6HGQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:vQd+mmEmQ30aQn66YCo=,iv:Qvpd+8Uk5UdHz3lK3GGlPHEi1Ong+u8GdvtwvHujVos=,tag:MFnUevMwkNlG0mTqPsxl8Q==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:newTr6FfZxy45t27++JQirkD0Fc=,iv:hwj6DOJEZeVSVkQd8uJV8ecg1cLLAMEJbOkZN6zypxI=,tag:dPB5LhWdudCi3EYaNCM6JQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:ivVLtRfTBJI=,iv:8WicMybZv5TvG3tHBcouI6tTcl7owXvZT8IgFFgT+TI=,tag:LXlh8GU20yXnNoYUWqvCuw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:1UnVQJvd5sAqxxYT,iv:qgNrNaQp8UhUtRp8xpYeuZ6lGRVGkEyQj1Dg21OzGuI=,tag:CWOajOeaQ+heHvzu/zM0rQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:vkX9eSxh9Yuq,iv:8Yv0nWLbUXGR4NB7Okf6AxmN1UL8Ms6Drpl9jEcHDi0=,tag:4XUpf89+QnDrFdIaiE6+zQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:tKcv0fC1vCsY,iv:hguDAp08Ral3UQgTnQ+XTSXx/geCMxZzT2jMUpA3fPc=,tag:J8qH4+3xMgs/I4XG0bpJGg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:43lo2upNONWPkKk=,iv:Svil4V+BbruX3vbAia3YM3caXcfCyXPG9kfQ2i2F3bQ=,tag:h1GipzUfqEhhADT93KdQFg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MYHUrTEceMmdt7CVAA1h6EgVPHan,iv:41jLr1qWSS836p5HMbw/jJAqTP6kxI8fgWIo9A6qt4I=,tag:yv9xGjnBM/IexkiMk+lbJw==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:TTtYKmEl3DDcfm29EqgZcOvLCQuI2kuaeCqkK2d0cuU+Rn5EvOlJ3qPNGnKz7poac3CZ4Wi1RPp3WxBq2YzEL9vWXMKy7b8=,iv:wzNJpCa0xHL9gyC3vdkMfxRSg6YQHzcDAGsEiJ+7pjM=,tag:2ejd1opdzdPPnf74J1gprg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:C/Cww6vmeNmhC4Oi3yY7BJVDxfyqU59B/Tu1XRyyapSPiuQ=,iv:PoUufk7+vtzaWm+MiSL++wMPb1JUDP5JQ09cNGlyRQk=,tag:SyQQ7Vg3bS/51LYL52wdFg==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:sbK4PCS+qPdaGoZ8enDYbf0TQQ==,iv:GyoeWm/ZDAwFd9dDmSqWgTpHq2x2o28Bor6FNUjxBto=,tag:aPt0Rnl7AI6OjbE7pPGwuw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:YaH/xTsXREbyVuTavR+3aZukfQk5,iv:Ucksfc44s0QlhSqnu6AnL+X2elZZd754rdjk40AqHjA=,tag:r0wFz29sIriUdD4Ysetm0g==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:iEap4NFg/Gk=,iv:S+3Q8+ncif1qZmANio7DEVp62Xz1sssRd3NRvsRT6Fk=,tag:HS3HQTthQs3zAnJbRkvn8g==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:/TuLnYrrlS8=,iv:6EShDzBrgIE03i7Kp3CMFgLyD9diHznVD+961Lb3vNs=,tag:QzYT6hVdMryAOjbb9MXbow==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:ev8tY8AptD9s+85z7yxfKMRcBTsr6Ge/GFfimCpxIOmVR6g8/VNOMKTZ/zDIzb/JXYi0LemqsgzGOHnD2XrDqg==,iv:+mwVHvJpgKDCnKIlE5EpeBrHVvgzP0enZb2m8WT9qtE=,tag:27H1z99ExBS+rAVgkIaoOg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:LwkD+ZMeqDgNqzPFy9sn33sZOjfANg8/es4KP1hHENmVAWh6QJR1mQDvW1exDSyyhgWFUR4kU01oFTNAYDSELA==,iv:wMa4x5ImXGkRXP8D6S6AgcA6ADZwlyvsOAGvmxxEN+o=,tag:V9Me4/grT5p+NHhIE2pCHw==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:sm9hkzRx/wJq,iv:PAHAsMGtAbRWRUcFeLWx6eeYGLS72CsbLszfXbXpoPk=,tag:ur364nnKI4TpQ8jJ1aZ+Dw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:5q8E4MHdZnxcNMyFo9e9,iv:qurLBOqboOag6SJK4wEDYCp4KMK5Mwu33kG69Oyue/k=,tag:NNyllVFI/n6eYcvpEP3MZQ==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:2HmJ+OdhdM4CltASllsOdg/vMFRIlk7tAQztcCCUJnYGFG49OLXTiKZ3InoTPup9RPM=,iv:DHWwM73V17PDz27An26JPbvTg4j9UwE2S0DIfaylu8c=,tag:a/GC343hu0tYe4KzC/6e0g==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:R+JleSC4KvaiS7Y3cKo=,iv:7OUpUSS19XsR8lPOVfcdWhXRwiy5pTJuRFj+eWr81Qw=,tag:wDBnVf6VqZKPCEhmuufCJw==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:+/tkvVbE/DeN5sL31OPRR+r3dI8=,iv:hYbk9HVgg6ofI7Wr0uH+pxbcIP8aflXeHhnpKWrFQHA=,tag:ZaWn6L0EdnSAgr703PIizg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:h6ddUiKmbBI=,iv:oTYemlI8nP9odzr4CJJOiUXVL0YsAU6rNwaBwAL+wwM=,tag:os9YA2/9//G9+rIuIMHb4A==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:e1TRIvzqSXBKG8nG,iv:Rcotvm1DQ+qhroGkehhI3a+rkUf02W+rjn/A3z8zgsQ=,tag:wsHRp0XlHIS2cq4fEtm64Q==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:bi6GW2mwpMsr,iv:fmk6GLKUdeLjbrSNncAiOUKsGDNfUAbh1eb3mvuE/pY=,tag:T+WY+7uGiKFLqSu4lRElMw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:FWO5cRU4tKaP,iv:4qPbOMarxhDS9SKY4nTijzSlT8nDSWnBt9/+OjtQK7c=,tag:O9giwkZAbWRSVXMZ+NglXg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwOVV2Uzc2QXlXRExVQy9s
-            dFUxclpWTUVzL1ZTTjlVdjd5SWZRWlF6WENvCmZGRCsyb1pibDhWOHVrNjNyNkFM
-            WE1GbVVEaXQzbm8rbnBpVmhEREVYTjQKLS0tIHFnZXlXMThOZGxGM0hzdERZdmho
-            VU5iQWxMTHRncmJIMEF0TGhTQ3lLOGcKQNg+51NLuuLdD8xqK5a44c160A5MqRmx
-            NjsJ8x4Ex1mVJvYB4CM9QSOpBO3ERn3ovWKjmqGsHXHyzUElbO4yDg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIT1ZpSXNpK3dqNHJDZDkv
+            bGVGbU1OZzZNaWVBTEpBa3ozalRZMFZvWlRVCjBwZCs1M3VtMk93WUV6YVFSTW9G
+            NisyVzcrclU4NGMwYXc2dnlPZk5oWEEKLS0tIExnckUzbm92Y1lpV1NvK0ZiUVVk
+            cEJlMkFMdHR1b3VZb1h1YVdDL01LSmcKX/jVWegy7TOySGG0IAgHUZJA9xFJiiUo
+            EpuwZiZjZrTuNe+TZF0cajHuoeClUTdne5n4S3f4+qfnXlUb/iVQdQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T16:13:56Z"
-    mac: ENC[AES256_GCM,data:m94/9deKsRVyeMcRrvgHUYWC6XP/s2dGhDWKfb7LPpu6Y1MHFvgxO9HjcGXnNkXvUhkFcMIXVbisRhqppkYwHvPPX3g6cazWvM9qoU+cvNZViF3/Tvmv3k+iNtVdE8PB52pK5oe1tYGVP/AJGwA1GbvW0P70muEtMIM3VJ7/6+Q=,iv:pzOM3BuVBrVZeMHyAvcktFFL3bq4dghw6WfYksua2EM=,tag:BT7AnY6eFjOEUeEA28JI7A==,type:str]
+    lastmodified: "2023-01-15T23:56:20Z"
+    mac: ENC[AES256_GCM,data:50jEIkiB6yFIzjxJoQUHI73vHWrzjh83Q0UiZYtdGpT/R9/kNtk984JdpkUpFAk1C9bR2kKXUt6iYJVviodOVsOzLiD481K5Kq5juNjPTVUcbNECNkA4iuPTPlxvU9woRk8nYklhElxfuIeiUdse1z9qCYxppaNy1IlgUoJAbyA=,iv:S9D48wB+AF9InWe0ZuqASGt5By0s6vGWENwEl5/VGpY=,tag:t59tzjzyyZPY4SOysU17Zw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
