--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:e6FrLKN7,iv:cglhclJTksp5G/pn381MtYORh3BdtKflMllbbIiickI=,tag:qmEMzo6KIB+TORJuneP0yw==,type:str]
-ansible_user: ENC[AES256_GCM,data:HQu4Ai7D,iv:uuO7BWVTvV4XcJJKsJUa+KWm/iO/+z1UnmKQpT13xv8=,tag:DCiqvpVCYU91+cmZK749iA==,type:str]
+kind: ENC[AES256_GCM,data:TSJE9O4r,iv:gaDQ9JGQEn86n4so0t+lqpVb6QFVBj+LqBQx6m0XHso=,tag:K3fbpGS16NkOTEkoUOvjWw==,type:str]
+ansible_user: ENC[AES256_GCM,data:GUoAz2I/,iv:pRmhA4ZzWeeNfMB5fZvOFWtMo/Lme1j8zErMCTGolaM=,tag:yMZ2KCSh+0MXny7evj/l/A==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhazBLVUY1WGc4WkRUakJm
-            TGc3SXRDQnpVRmNVSVd2d3FSSDBSSWhuV0JVCldtd1l4L3IvT05KUzkzdGI2aHFj
-            M2hYUlZtNW4xTnBqd0xIL0Jza0ZFYTQKLS0tIHRUSUFrem5FeE9teENYYzRmdDVQ
-            SGt6U0xFZmR3RGJEZHhreEhPK05obmMK9yoMZtRQYgn1Lypjot86jh7KKZKs3PKb
-            h5nV65ufgABoJIAKOrr4wXVM2aWmlifON5D0Pdgwu82CPfAcp22nkg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYR2tnL0h3TzlHcWVVdm5x
+            cU5rNUZoYk9XNjNVa3BEaVQ2Z1MwZ1RXZTNVClFmYURHV3lPdW85QjBjbzNGU2E3
+            UysrNC9QNE0zTkxEbnB6My9jTDlqRVUKLS0tIDZleWFObDI3SVlzVnFCN3M0bThW
+            dkcyYkRXUHRHVC9kZk9PekJrRldMbTQKCYpy6oOq/p/TEs05p5T8uDLqY7HGuyhx
+            3M1pkvDmn51Z0K7BaHn/yrMlyTTXh2BY17ZuDkYztIrk+Pn492ZF1w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T16:13:56Z"
-    mac: ENC[AES256_GCM,data:kzf5hncFNHNHgQ98olQ2OBVvjgkDT9nBPjZrj5kMoVPqf8ANlX04TQXPDEwwtad/VgNS7cyVjQbljCPQImdRWwL8j6N4Fpp72NG7Dqih1XkeXkXYN1lzvqtxa85fuuejHWAX+Q0UD26ydvQ8qQ585I7csvTdiCJ7ZToirt8xu+I=,iv:/Wj0mqhc6EyxBS+2e3hrkm3lEnebax0CPszbO7MLf4E=,tag:JUAfpt/keMXzeQzOfedOBA==,type:str]
+    lastmodified: "2023-01-15T23:56:20Z"
+    mac: ENC[AES256_GCM,data:11bYJ4f+BQY+SGtlXwB5fPNpTwFxbAzuMfpFAyAoRN3G+LwGacfx3KhgNEgAtMSu1ixiq5zPNZDHXLX91WlVKrVJXukAWAS+FEN4zZl8NjoNDk9tjHr8JPVxgtetmEjzhUN2zo2al6dRBkHRxxHwShDZ11pJ4nX+vIQ+KEC2u0U=,iv:2sTMvPO799JKnuT3C/lUsUKSU/lnLs8LzMMBMpNInWU=,tag:7xqabTRF+Pa39MXuwYchRA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
