--- a/ansible/inventory/kube/hosts.yml
+++ b/ansible/inventory/kube/hosts.yml
@@ -15,3 +15,5 @@ kubernetes:
           ansible_host: 192.168.1.34
         k3s-4:
           ansible_host: 192.168.1.35
+        k3s-5:
+          ansible_host: 192.168.1.15
