--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:yvmQxWUdYYsBCAIZ9/Ikx6P2j9vn,iv:4AGj621dwiWd6fiMsPLcPTspGst9ajbg0u5bcDhpX7o=,tag:0sZbuy2DhmZS4ULoza90yA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:Sc58qWDfWcCxZ17Om3U7+4j3oTuOHygcrBulmcO96zm2dqGpRw==,iv:VEmv+GEckNRxQf+wEqLfy3OSxA1dsL7N4gPIezfCz9g=,tag:bNFf5qPuAXKNGg72PsgXHg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:w//57K1uFwPEIRY=,iv:pY39yI6B61cpwkdaMLLm9IfU9komWKZSfNAUxLlaTFY=,tag:RRleZ5XUkcbfHKFdHKZ8XA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:vkNT0lSM/TLzKrfTRjOxcTbCAo/D,iv:wEI/EnnJ8RHCbmpidxhyTb+4OgggS9PotfYlApRPVFg=,tag:f0CGdA039IAgkkdLesERPw==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:8AIMy1vSHgn1XIUlIM2mmkuHGWEclluZrXVmxzQQ/BXFzah+lw==,iv:gDVkE24hMQwM6+hw9DZhKieSEtW+N4W/j+dngUmZUY8=,tag:GtLZ1whrVZT6vGXO4+uNbw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:fUL9b3mOq4Y6eok=,iv:gNKrJC6TQphdRfepSQR2em+8SGzlO8dTcC/EiJtgDSA=,tag:U2LeoACeeykbXiTPNgvv6w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxb25EODVBeWVmRzNZcXNF
-            THNZbGxEeW9DaGIyb2xsTndtYmtqVTZONFVjCmUvR3UvWTZEWkMwTVRtWTRyTkwv
-            WXVLdC9tWnVQNWp0d1QwZzZORmJjck0KLS0tIFEyblRPdDlnTFJsamRERllCQ0lF
-            TmUrcFU0WG1WMDRtQU9pamd3cE5zcGsKCKmXX2qphO9e77gImZUoYv++ZircZeAw
-            vHAY6n2bXuUpDKFwkc7lXBmwUasQgAc6WRhgfj9cHKm41p3xyujKkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkVENiUGsxMERvMGNlTHRs
+            WGJ0Zzc5VEg5U21sb3RFOTlUN0o0OW96aUNRCkhiSWdnaDh6ZDJTcUtHZWJZQTlB
+            OUt2R0p6dkcwYkVQVTdNblFzaktyaGsKLS0tIGZvV1pGV1BvbEVHcVRoaUZYNUxx
+            U0dmdFBBVUxHNC90Z1JZaGgxM0ZQODgKPPhhf8DZk4MLNBYepLLq1bGfxAG3wwJv
+            g6vzoXTfispqPT8XRX1d6SKpxZDLYovAhkfaDJ0EFMdnAIRqD9aP/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-15T23:56:20Z"
-    mac: ENC[AES256_GCM,data:nzithQu0V/fAjvQ6FPCfK1W6QVYWGyZRD2cEgSWRPOOEm5WOA00ofc6OteTat2LkPYRceOh/TSCCXJk/3fUXMOg2ZsrnZGRUFxQXyyulc3JBa0ng9r7W0lKWFvQCxmBgrBHptWjQE+I/hN0YoViFzAAlo15bmGnP5rgfwZJofZY=,iv:NM1Qb2b0f5LcwaY2S7WwOlHMULMEf+OLDFEeleu0hj0=,tag:/qyIzt1+n0AOJyDCVlYyow==,type:str]
+    lastmodified: "2023-01-16T03:15:27Z"
+    mac: ENC[AES256_GCM,data:pi4NApNAhk5reVukK1qpC2kulD4el/gAGdijjZhX8cl8o78addZShcXM7uo7rc4ToHvivxGuwWKxUNKeG3f+aX3P9x5PKu/Hsw86DVh5RAmMfF0wp4cB5bxSAq95Rr6Tzee/bIFB6QoqtZyGwpaBWBTU/ZF81bq39ceoVhCtAQw=,iv:5diWoSp3PO7dSMoz0PMObgyqYg77PjAeJmyMyHAJnts=,tag:1ojXqX/c9G9XNGc/KRhRig==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
