--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:43lo2upNONWPkKk=,iv:Svil4V+BbruX3vbAia3YM3caXcfCyXPG9kfQ2i2F3bQ=,tag:h1GipzUfqEhhADT93KdQFg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MYHUrTEceMmdt7CVAA1h6EgVPHan,iv:41jLr1qWSS836p5HMbw/jJAqTP6kxI8fgWIo9A6qt4I=,tag:yv9xGjnBM/IexkiMk+lbJw==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:TTtYKmEl3DDcfm29EqgZcOvLCQuI2kuaeCqkK2d0cuU+Rn5EvOlJ3qPNGnKz7poac3CZ4Wi1RPp3WxBq2YzEL9vWXMKy7b8=,iv:wzNJpCa0xHL9gyC3vdkMfxRSg6YQHzcDAGsEiJ+7pjM=,tag:2ejd1opdzdPPnf74J1gprg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:C/Cww6vmeNmhC4Oi3yY7BJVDxfyqU59B/Tu1XRyyapSPiuQ=,iv:PoUufk7+vtzaWm+MiSL++wMPb1JUDP5JQ09cNGlyRQk=,tag:SyQQ7Vg3bS/51LYL52wdFg==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:sbK4PCS+qPdaGoZ8enDYbf0TQQ==,iv:GyoeWm/ZDAwFd9dDmSqWgTpHq2x2o28Bor6FNUjxBto=,tag:aPt0Rnl7AI6OjbE7pPGwuw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:YaH/xTsXREbyVuTavR+3aZukfQk5,iv:Ucksfc44s0QlhSqnu6AnL+X2elZZd754rdjk40AqHjA=,tag:r0wFz29sIriUdD4Ysetm0g==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:iEap4NFg/Gk=,iv:S+3Q8+ncif1qZmANio7DEVp62Xz1sssRd3NRvsRT6Fk=,tag:HS3HQTthQs3zAnJbRkvn8g==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:/TuLnYrrlS8=,iv:6EShDzBrgIE03i7Kp3CMFgLyD9diHznVD+961Lb3vNs=,tag:QzYT6hVdMryAOjbb9MXbow==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:ev8tY8AptD9s+85z7yxfKMRcBTsr6Ge/GFfimCpxIOmVR6g8/VNOMKTZ/zDIzb/JXYi0LemqsgzGOHnD2XrDqg==,iv:+mwVHvJpgKDCnKIlE5EpeBrHVvgzP0enZb2m8WT9qtE=,tag:27H1z99ExBS+rAVgkIaoOg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:LwkD+ZMeqDgNqzPFy9sn33sZOjfANg8/es4KP1hHENmVAWh6QJR1mQDvW1exDSyyhgWFUR4kU01oFTNAYDSELA==,iv:wMa4x5ImXGkRXP8D6S6AgcA6ADZwlyvsOAGvmxxEN+o=,tag:V9Me4/grT5p+NHhIE2pCHw==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:sm9hkzRx/wJq,iv:PAHAsMGtAbRWRUcFeLWx6eeYGLS72CsbLszfXbXpoPk=,tag:ur364nnKI4TpQ8jJ1aZ+Dw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:5q8E4MHdZnxcNMyFo9e9,iv:qurLBOqboOag6SJK4wEDYCp4KMK5Mwu33kG69Oyue/k=,tag:NNyllVFI/n6eYcvpEP3MZQ==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:2HmJ+OdhdM4CltASllsOdg/vMFRIlk7tAQztcCCUJnYGFG49OLXTiKZ3InoTPup9RPM=,iv:DHWwM73V17PDz27An26JPbvTg4j9UwE2S0DIfaylu8c=,tag:a/GC343hu0tYe4KzC/6e0g==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:R+JleSC4KvaiS7Y3cKo=,iv:7OUpUSS19XsR8lPOVfcdWhXRwiy5pTJuRFj+eWr81Qw=,tag:wDBnVf6VqZKPCEhmuufCJw==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:+/tkvVbE/DeN5sL31OPRR+r3dI8=,iv:hYbk9HVgg6ofI7Wr0uH+pxbcIP8aflXeHhnpKWrFQHA=,tag:ZaWn6L0EdnSAgr703PIizg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:h6ddUiKmbBI=,iv:oTYemlI8nP9odzr4CJJOiUXVL0YsAU6rNwaBwAL+wwM=,tag:os9YA2/9//G9+rIuIMHb4A==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:e1TRIvzqSXBKG8nG,iv:Rcotvm1DQ+qhroGkehhI3a+rkUf02W+rjn/A3z8zgsQ=,tag:wsHRp0XlHIS2cq4fEtm64Q==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:bi6GW2mwpMsr,iv:fmk6GLKUdeLjbrSNncAiOUKsGDNfUAbh1eb3mvuE/pY=,tag:T+WY+7uGiKFLqSu4lRElMw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:FWO5cRU4tKaP,iv:4qPbOMarxhDS9SKY4nTijzSlT8nDSWnBt9/+OjtQK7c=,tag:O9giwkZAbWRSVXMZ+NglXg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:X6xvLQo4t6E1JiY=,iv:oklB/jrs8mKDsxKxTUiLJevQ4Lp4j7P1D5zOQhlTW78=,tag:hjlO9ysEIwPmZaNSbS1FcQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DvluJfSazn4ur8zAVmwBv7zXmS3E,iv:2ee8S+BjJlGZD7L9zFLCpkas7b4z5VmR+0Mw2i6XkIA=,tag:OAnbfbsNPyH/HbvnzguCKA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:V1N+8HpiKsW1EraFYPkgzJH0NVO2eZ1/cRiBUeo3aCdgPhdw8KFCTIK9hOoZT6QGIsq3I+Oo2yqP8Jo4eOxyQBT/pOEJBTA=,iv:f6TAKzruYvafwax4c8ZwfsVMIb9AeZUXQVoXiCkSDRg=,tag:ZrfFy67CpkiWHPMVbuCreQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:EXOp435of8RfULCgAGksb9kohNWfalJ/aN8agXLpPX8GMoY=,iv:hiwqWO+tySrqUSP2oBo6APVXQeh2nb6wr6GNSyVsSFQ=,tag:Y8lmkrYbDhsrFLF2/5tR1w==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:8eoyHYIG9LP4vv81sEkzSyVAqg==,iv:JMiipwmKZ++HHg1i3PXPIPT+SBzS4t1MMPcR/yhWMqI=,tag:t4oEHzQ/Ss2EI7VreMCcrw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:NeE880BEkqW0BxGgNLtykH0tyVey,iv:80+3dFZD88zeW8vEzh36EfPshnfzsMaixoh3TtSBrzw=,tag:dU/1r/L3/B3VcDoSlv7njw==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:baBxXbZfjiU=,iv:WNvgaKA2tbpZVKZXEnTNfIaCQ9m2Fe4LA/LscZZ9wmw=,tag:BWYBTiP31JAFFaTqa2FeEQ==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:eaFrpABEsZE=,iv:h7SZbFHAKv1rV/s9w6nLcChUWvQlHn1/oX+qnw/ZQss=,tag:vei/sBs+J9WYX/KDkYCZ1Q==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:2xmuEuGrGVefnoz+hnv+v2J+xGj1hlK4FpMGfJ6iJrV5Rm7qZNO9FjFAeC/9oVh0Y09N5dkii5aEcbK7O3CUiw==,iv:uMJrpsoHTyhAHQHUS5wX221ACJMLTqyymsTTsMcYSPc=,tag:kMaT9H+nuC6y+f8p/X3Pbg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:OhuCvI3U1Lybw4pcjhvZXhCMNupU6VSbU/jl6akKxjLgYTHY+EEjNCmKVr9RO3xOOlSpGPRr2PKBkgAhlCXQwQ==,iv:4aj/YiDpBWZ2sWVGS0L1WQ03+L7310gBig6S19u0z5Q=,tag:lqXxrVUvZF2of0XWMLSWug==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:f4RSH1dRWKF8,iv:U0LHL4ep9Zw8ydLvBDZWcZeBFFPPTQ/hFAEvZoipDcs=,tag:bhWDvgeTX8pZswUvHVJCIw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:Hd6Vj2zwHltme6vN4rXl,iv:pyUDbdRHtVmMj4WJw4HHuK9wlvjYWxtbLU9hlEnx4Ns=,tag:a/6tjw2R4zE8KdJbI+098Q==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:njs2rX9nlCmdxjOn93piEikklkILvZaYITu9TTVhiWWOaZJ3BBzVMdDlsHTOyH2lEZo=,iv:sRb6bz0rvzLz1vqXIpegHo3F5I5gkvXV9bK1pELrSVI=,tag:sLQRPRnZALDv+FNfzP20tQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:2b9azqaHQ9s9ymy/e6U=,iv:9jNomqraBxe0i13snJ1Nk58CbIKbRzIPFzIr6m66ZSE=,tag:hgH3Hr0wY6m+Yo+cI1JcUQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:M/u4vRAYbeLgqj4hmD9bLtY5pcU=,iv:YJNVXMpVU0koNyeCRM9aLd7POY5GRY3Mn58ej1L0q9I=,tag:/UJa52o+H8AppSWlaf1EvQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:S9zCa+9M9hI=,iv:0JKjawMmYe1IzwVEZP3LJWUieA/5utUsrzbQfEqGR1c=,tag:WTOE1kae4oJ+ELr5RYf8nw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:VrdyazQHQ5/GFLxR,iv:vepeAjJ74Z9to61FUSXwImyh9j2eWzhJubCbyvFHYIo=,tag:ybspGDjKS2eQtuFSs02adg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:ojnxUnurxyE0,iv:TzKEqT7JcOopS8hHS5DleXJ78XjBr3TlRCHFjcwqVNg=,tag:irh/1xsKdBKR8FrlKtqmRw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:roZPqxav8jUx,iv:fHaZKkCRMCfIv4q5StiwYJw4Q99PC7O+kL114dwylY4=,tag:3w3vSag279gMVcjLF7tv/A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIT1ZpSXNpK3dqNHJDZDkv
-            bGVGbU1OZzZNaWVBTEpBa3ozalRZMFZvWlRVCjBwZCs1M3VtMk93WUV6YVFSTW9G
-            NisyVzcrclU4NGMwYXc2dnlPZk5oWEEKLS0tIExnckUzbm92Y1lpV1NvK0ZiUVVk
-            cEJlMkFMdHR1b3VZb1h1YVdDL01LSmcKX/jVWegy7TOySGG0IAgHUZJA9xFJiiUo
-            EpuwZiZjZrTuNe+TZF0cajHuoeClUTdne5n4S3f4+qfnXlUb/iVQdQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGV2FyczZFTXc1MmozcU5Q
+            QllpMWFQb0RwekFHZU9VVVJNUHpPSnlnSW5FClNYYnNEUVZjcUJHSEo3a1VPeXFQ
+            RGk2OW9CYk1TZ1lJTjNIcVg4eVJQL2cKLS0tIFNRV3ZwL2NEY3NaNk14R1RXRmtO
+            QWFRdG9iVWNxNVdyL2ZFL3pKNHp1eFkKNh+hpDxhe1vJSpwV4Jd075xe7I0iKeQC
+            My3Z4+OVYNgn049E56PiAgWcYbzJGqf5ZloJWUIl4QxX7x8+yhIZFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-15T23:56:20Z"
-    mac: ENC[AES256_GCM,data:50jEIkiB6yFIzjxJoQUHI73vHWrzjh83Q0UiZYtdGpT/R9/kNtk984JdpkUpFAk1C9bR2kKXUt6iYJVviodOVsOzLiD481K5Kq5juNjPTVUcbNECNkA4iuPTPlxvU9woRk8nYklhElxfuIeiUdse1z9qCYxppaNy1IlgUoJAbyA=,iv:S9D48wB+AF9InWe0ZuqASGt5By0s6vGWENwEl5/VGpY=,tag:t59tzjzyyZPY4SOysU17Zw==,type:str]
+    lastmodified: "2023-01-16T03:15:27Z"
+    mac: ENC[AES256_GCM,data:fs3BTo+oC+m5pjaptj+TGzTYV182iHT48HiP5zz6I/vx8DXyb0jCCWL38LdtyaBCg0x0JZULCK1aouY6cT+O2jFofC9kdhqZ9dFsqk0ICHPnlyBlaxq8Ig9dFy3Rqxw/VsCVSHsAaTgqNbft0q0c/ZysLN5duQG77X4mglhKFBQ=,iv:loos+GboYnDnF2olA5yNTk8XsQ2wjhWi6dhkn9Q3tF8=,tag:z0nev+yQldaS/ogvOwrEOA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
