--- a/ansible/inventory/kube/group_vars/master/k3s.yml
+++ b/ansible/inventory/kube/group_vars/master/k3s.yml
@@ -16,12 +16,14 @@ k3s_server:
   disable:
     # Disable flannel - replaced with Calico
     - flannel
-    # Disable traefik - replaced with ingress-nginx
-    - traefik
-    # Disable servicelb - replaced with metallb and install with Flux
-    - servicelb
+    # Disable local-path-provisioner - installed with Flux
+    - local-storage
     # Disable metrics-server - installed with Flux
     - metrics-server
+    # Disable servicelb - replaced with metallb and installed with Flux
+    - servicelb
+    # Disable traefik - replaced with ingress-nginx and installed with Flux
+    - traefik
   disable-network-policy: true
   disable-cloud-controller: true
   write-kubeconfig-mode: "644"
@@ -43,9 +45,3 @@ k3s_server:
   kube-apiserver-arg:
     # Required for HAProxy health-checks
     - "anonymous-auth=true"
-    - "--audit-log-path=/var/lib/rancher/k3s/audit.log"
-    - "--audit-policy-file=/var/lib/rancher/k3s/audit-policy.yaml"
-    - "--audit-log-maxage=2"
-    # https://github.com/k3s-io/k3s/issues/1264
-    - "default-not-ready-toleration-seconds=20"
-    - "default-unreachable-toleration-seconds=20"
