--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -9,25 +9,24 @@ spec:
   chart:
     spec:
       chart: cert-manager
-      version: v1.10.1
+      version: v1.11.0
       sourceRef:
         kind: HelmRepository
         name: jetstack
         namespace: flux-system
+  maxHistory: 3
   install:
     createNamespace: true
     remediation:
       retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
       retries: 3
+  uninstall:
+    keepHistory: false
   values:
     installCRDs: true
-    replicaCount: 3
-    webhook:
-      replicaCount: 3
-    cainjector:
-      replicaCount: 3
     extraArgs:
       - --dns01-recursive-nameservers=1.1.1.1:53,9.9.9.9:53
       - --dns01-recursive-nameservers-only
